# Programmieruebungen_2

./: README.md  load_data.py  plot_power.py  power_curve.py  pyproject.toml  sort.py  time_conversion.py
